# multi-ipc-test

./: Cargo.toml  README.md
src/: client.rs  main.rs  packet.rs
